# classical-mechanics-notes

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml
assets/images/: .gitkeep
assets/videos/: .gitkeep
chapters/: 01-vectors-and-derivatives.qmd  02-newtonian-mechanics.qmd  03-spaces-trigonometry-and-vectors.qmd
manim/: pendulum.py
scripts/: build_manim.sh
